...
        modifier = Modifier.fillMaxSize()
            .padding(15.dp)
    ) {
        Column(
            modifier = Modifier
                .fillMaxWidth()
                .verticalScroll(rememberScrollState()).testTag("columnLayout")
                .weight(1f)
        ) {
            ElevatedCard(
                modifier = Modifier
                    .fillMaxWidth(),
                shape = RoundedCornerShape(4.dp)
            ) {
                Column(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(15.dp)
                ) {
                    Heading("Basic Information")
                    DetailsText("First Name", viewModel.firstName)
                    if (viewModel.middleName != "") DetailsText("Middle Name", viewModel.middleName)
                    if (viewModel.lastName != "") DetailsText("Last Name", viewModel.lastName)
                    if (viewModel.dobAgeSelector == "dob") DetailsText(
                        "Date of birth",
                        viewModel.dob
                    )
                    if (viewModel.dobAgeSelector == "age") AgeText(
                        "Age",
                        viewModel.years,
                        viewModel.months,
                        viewModel.days
                    )
                    DetailsText("Phone Number", "+91 ${viewModel.phoneNumber}")
                    DetailsText("Email Address", viewModel.email)
                    DetailsText("Gender", viewModel.gender)
                    EditButton(viewModel, 1)
                }
                Divider(
                    modifier = Modifier.fillMaxWidth(),
...
            ) {
                Column(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(15.dp)
                ) {
                    Heading("Identification")
                    if (viewModel.isPassportSelected) DetailsText(
                        "Passport Id",
                        viewModel.passportId
                    )
                    if (viewModel.isVoterSelected) DetailsText("Voter Id", viewModel.voterId)
                    if (viewModel.isPatientSelected) DetailsText("Patient Id", viewModel.patientId)
                    EditButton(viewModel, 2)
                }
                Divider(
                    modifier = Modifier.fillMaxWidth(),
                    color = Primary70
                )
...
            ) {
                Column(
                    modifier = Modifier
                        .fillMaxWidth()
                        .padding(15.dp)
                ) {
                    Heading("Addresses")
                    SubHeading("Home Address")
                    AddressCard(viewModel.homeAddress)
                    if (viewModel.addWorkAddress) {
                        Spacer(modifier = Modifier.height(20.dp))
                        SubHeading("Work Address")
                        AddressCard(viewModel.workAddress)
                    }
                    EditButton(viewModel, 3)
                }
                Divider(
                    modifier = Modifier.fillMaxWidth(),
...
                    onDismissRequest = {
                        viewModel.openDialog = false
                    },
                    title = {
                        Text(text = "Discard Changes ?",
                            style = MaterialTheme.typography.titleMedium,
                        modifier = Modifier.testTag("alert dialog title"))
                    },
                    text = {
                        Text("Are you sure you want to cancel preview and discard any changes you have made?",
                        style = MaterialTheme.typography.bodyMedium,
                            modifier = Modifier.testTag("alert dialog description"))
                    },
                    confirmButton = {
                        TextButton(
                            onClick = {
                                viewModel.openDialog = false
                                context.startActivity(Intent(context, MainActivity::class.java))
                            }) {
                            Text("Confirm",
                                modifier = Modifier.testTag("alert dialog confirm btn"))
                        }
                    },
                    dismissButton = {
                        TextButton(
                            onClick = {
                                viewModel.openDialog = false
                            }) {
                            Text("Cancel",
                                modifier = Modifier.testTag("alert dialog cancel btn"))
                        }
                    }
                )
            }
            Spacer(modifier = Modifier.testTag("end of page"))
        }
        Button(
            onClick = {
                context.startActivity(Intent(context, MainActivity::class.java))
            },
            modifier = Modifier
                .fillMaxWidth()
                .padding(top = 10.dp)
        ) {
            Text(text = "Save")
        }
    }
}

@Composable
fun Heading(title: String){
...

@Composable
fun AddressCard(address: Address){
    Column (
        modifier = Modifier.padding(5.dp)
            ){
        DetailsText("Postal Code", address.pincode)
        DetailsText("State", address.state)
        DetailsText("House No., Building, Street, Area", address.area)
        DetailsText("Town/ Locality", address.town)
        DetailsText("City/ District", address.city)
    }
}
