...
    <string name="city">City</string>
    <string name="city_mandatory">City *</string>
    <string name="city_error_msg">Please enter your city.</string>
    <string name="district">District</string>
    <string name="district_error_msg">Please enter your district.</string>

    <string name="email">Email</string>

    <string name="add_household_member">Add a household member</string>
    <string name="create_new_patient">Create a new patient, and
include them in the household</string>
    <string name="add_a_patient">Add a patient</string>
    <string name="search_existing_patient">Search for an existing patient, and
...
    <string name="patient_name">Patient Name</string>
    <string name="patient_name_error_msg">Name length should be between 3 and 100.</string>
    <string name="patient_id">Patient ID</string>
    <string name="patient_id_error_msg">Patient Id should be between 2 and 12.</string>
    <string name="select_age_range">Select age range</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="last_facility_visit">Last facility visit</string>

    <string name="preview">Preview</string>
    <string name="save">Save</string>
    <string name="passport_id_web_link">https://www.passportindia.gov.in/</string>
...
    <string name="voter_id">Voter ID</string>
    <string name="addresses">Addresses</string>
    <string name="home_address">Home Address</string>
    <string name="discard_changes">Discard Changes?</string>
    <string name="discard_dialog_description">Are you sure you want to discard this patient record?</string>
    <string name="edit">Edit</string>
    <string name="next">Next</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="first_name_error_msg">Name length should be between 3 and 100.</string>
    <string name="email_error_msg">Enter valid email (eg., abc123@gmail.com)</string>
    <string name="day">Day</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="error_msg_1_to_31_days">Enter valid day between 1 and 31.</string>
    <string name="error_msg_1_to_29_days">Enter valid day between 1 and 29.</string>
    <string name="year_error_msg">Enter valid year between 1900 and %s</string>

    <string name="age_days">Days</string>
    <string name="age_months">Months</string>
    <string name="age_years">Years</string>
    <string name="age_years_error_msg">Enter valid input between 0 to 150.</string>
    <string name="age_months_error_msg">Enter valid input between 1 and 11.</string>
    <string name="age_days_error_msg">Enter valid input between 1 and 30.</string>

    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="phone_number_error_msg">Enter Valid Input</string>

    <string name="passport_id_error_msg">Enter valid Passport ID (eg., A1098765)</string>
    <string name="voter_id_error_msg">Enter valid Voter Id (eg., XYZ9876543)</string>

    <string name="submit_and_preview">Submit &amp; Preview</string>
    <string name="submit">Submit</string>
    <string name="confirm_relationship">Confirm Relationship</string>
    <string name="patient_registration">Patient Registration</string>
    <string name="establish_relation">Establish relation</string>

    <string name="freq_dose_per_day">%d dose per day</string>
    <string name="med_info">%d %s %s %s\nDuration : %d days , Qty : %d %s</string>
    <string name="notes">\nNote: %s</string>
    <string name="timing">, %s</string>
...
