...
    Scaffold(
        modifier = Modifier.fillMaxSize(),
        topBar = {
            CenterAlignedTopAppBar(
                title = {
                    Text(
                        text = "My Patients",
                        style = MaterialTheme.typography.titleLarge
                    )
                },
                navigationIcon = {
                    IconButton(onClick = {}) {
                        Icon(
...
                        )
                        Spacer(modifier = Modifier.width(10.dp))
                        Text(
                            text = "Add Patient",
                            style = MaterialTheme.typography.labelLarge,
                            color = MaterialTheme.colorScheme.primary,
                            modifier = Modifier.testTag("add patient text")
                        )
                    }
                },
                containerColor = MaterialTheme.colorScheme.surfaceColorAtElevation(11.dp)
            )
        },
...
